# satlight

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md
benches/: date.rs  t.lr  (+4 more)
crates/driver/: Cargo.toml
crates/driver/src/: main.rs  prelude.rs  sample.lr  sample.lun
crates/lib/: Cargo.toml
crates/lib/src/: lib.rs
crates/typecheck/: Cargo.toml
crates/typecheck/src/: binder.rs  builtin.rs  checker.rs  diagnostic.rs  diagnostics.rs  hir.rs  lib.rs  storage.rs  types.rs  visitor.rs
crates/typecheck/src/binder/: bind_ast.rs  types.rs  visitor.rs
crates/typecheck/src/scopes/: mod.rs
lang/ast/: Cargo.toml
lang/ast/src/: exprs.rs  lib.rs  macros.rs  stmts.rs  types.rs  visitors.rs
lang/ast/src/visitors/: lifetime.rs
lang/checker/: Cargo.toml  README.md
lang/checker/src/: diagnostics.rs  lib.rs  utils.rs
lang/checker/src/analyzer/: checker.rs  errors.rs  mod.rs  normalizer.rs
lang/checker/src/analyzer/expressions/: call.rs  function.rs  library.rs  mod.rs  suffixed.rs  table.rs
lang/checker/src/analyzer/exprs/: mod.rs
lang/checker/src/analyzer/statements/: assign.rs  last.rs  mod.rs  typ.rs
lang/checker/src/analyzer/stmts/: assign.rs  last.rs  mod.rs  typ.rs
lang/checker/src/analyzer/types/: mod.rs
lang/checker/src/analyzer/typess/: mod.rs
lang/checker/src/binder/: ctrl_flow.rs  diagnostics.rs  mod.rs  scope.rs  symbols.rs  visitor.rs
lang/checker/src/context/: mod.rs  scope.rs  symbol.rs
lang/checker/src/hir/: expr.rs  mod.rs  stmt.rs
lang/checker/src/meta/: mod.rs
lang/checker/src/resolver/: errors.rs  mod.rs
lang/checker/src/resolver/nodes/: mod.rs
lang/checker/src/resolver/nodes/exprs/: mod.rs
lang/checker/src/resolver/nodes/stmts/: local_assign.rs  mod.rs  type_declare.rs
lang/checker/src/resolver/nodes/typs/: mod.rs
lang/checker/src/transformer/: mod.rs
lang/checker/src/transformer/nodes/: exprs.rs  mod.rs  stmts.rs  tys.rs
lang/checker/src/transformer/nodes/exprs/: arys.rs  assertion.rs  literal.rs  suffixed.rs
lang/checker/src/types/: makers.rs  mod.rs  utils.rs
lang/checker/tests/: case.rs  common.rs
lang/parser/: Cargo.toml
lang/parser/src/: exprs.rs  lib.rs  macros.rs  others.rs  prelude.rs  stmts.rs  types.rs
lang/parser/tests/: case.rs
lang/parser/tests/diagnostics/statements/: function_assign_after_method.lun  var_assign.lun
lang/parser/tests/expressions/complex/: type_assertion.lun  unary.slt
lang/parser/tests/expressions/literal/: bool.lun  function_with_type.slt
lang/parser/tests/expressions/suffixes/: call_combinations.slt  call_exprlist.lun
lang/parser/tests/statements/: generic_for.slt  local_assign.lun  local_function.lun
lang/parser/tests/statements/numeric_for/: base.lun
lang/parser/tests/types/: callback.lun  intersection.slt
lang/parser/tests/types/callback/: nested.slt  unnamed_param.slt
lang/parser/tests/types/table/: computed.lun  named.slt  with_metatable.slt
lang/root/: Cargo.toml
lang/root/src/: lib.rs
lang/tokens/: Cargo.toml
lang/tokens/src/: lib.rs  macros.rs
test-suite/: Cargo.toml
test-suite/parser/diagnostics/block/: past_last_stmt.result
test-suite/parser/diagnostics/expressions/access_method/: 2.cl  2.result
test-suite/parser/diagnostics/expressions/over_params/: 1.cl
test-suite/parser/diagnostics/expressions/over_varargs/: 1.result
test-suite/parser/diagnostics/statements/: call_confusable.result  function_assign_after_method.result  var_assign.result
test-suite/parser/expressions/complex/: binary.result  paren.result  paren_nested.cl  paren_nested.result  type_assertion.result  unary.result
test-suite/parser/expressions/literal/: bool.result  function.result  name.result  nil.result  number.result  str.result  table_array.cl  table_array.result  table_map.result  table_odd.result
test-suite/parser/expressions/suffixes/: access_computed.lun  access_computed.result  access_name.result  call_combinations.result  call_exprlist.result  call_str.cl  call_str.result  call_table_ctor.lun  call_table_ctor.result
test-suite/parser/scripts/: ProfileService.cl  date.result
test-suite/parser/statements/: call_exp.result  do.result  function_assign.cl  function_assign.result  function_assign_complex.cl  function_assign_complex.result  generic_for.result  local_assign.result  local_assign_init.cl  local_assign_init.result  local_assign_single.cl  local_assign_single.result  local_assign_with_types.cl  local_assign_with_types.result  local_function.result  numeric_for.result  numeric_for_complete.cl  numeric_for_complete.result  repeat.cl  repeat.result  type_declaration_complete.lun  var_assign.lun  var_assign.result  while.lun  while.result
test-suite/parser/types/: callback_full.lun  ref.result  ref_with_args.lun  ref_with_args.result
test-suite/samples/parser/confusables/block/: past_last_stmt.slt
test-suite/samples/parser/expressions/complex/: binary.slt  paren.slt
test-suite/samples/parser/expressions/literal/: function.slt  function_return_type.slt
test-suite/samples/parser/types/: tuple.slt  union.slt
test-suite/samples/parser/types/callback/: full.slt
test-suite/samples/parser/types/metatable/: base.slt
test-suite/samples/projects/sample/src/: init.slt
test-suite/samples/typeckr/fail/any-type/: scenario-1.slt  scenario-2.slt
test-suite/samples/typeckr/fail/call-expression/: missing_args.slt  unmatched_arg.slt
test-suite/samples/typeckr/fail/function-body/: incorrect_end_type.slt
test-suite/samples/typeckr/fail/local-assign/: not_defined.slt
test-suite/samples/typeckr/pass/call-expression/: tuples.slt
test-suite/samples/typeckr/pass/local-assign/: no_explicit_type.slt  type_ref_solving.slt  untyped_function.lun
test-suite/samples/typeckr/pass/local-function/: base.slt
test-suite/samples/typeckr/pass/metatable/: type-match.slt
test-suite/samples/typeckr/pass/others/: problem-1.slt
test-suite/src/: main.rs  parser.rs  project.rs  typeck.rs
test-suite/typechecking/fail/declare_var/: leftover_exprs.lun  not_match.cl  same_line.cl
test-suite/typechecking/pass/: declare_var.lun  shadowing.lun
(+112 files in other folders)
