[workspace]
members = ["lang/*"]

[package]
name = "salite"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "salite"
path = "src/cli/main.rs"

[dependencies]
anyhow = "1.0.57"
chashmap = "2.2.2"
id-arena = "2.2.1"
lazy_static = "1.4.0"
log = { version = "0.4.17", features = ["std"] }
salitescript = { path = "./lang/root", features = ["full"] }
serde = { version = "1.0.0", features = ["derive", "rc"] }
serde_json = "1.0.0"
thiserror = "1.0.31"
walkdir = "2"

[dev-dependencies]
env_logger = "0.9.0"
