[workspace]
members = ["lang/*", "test-suite/"]

[features]
multithreading = []

[package]
name = "salite"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "salite"
path = "src/cli/main.rs"

[dependencies]
anyhow = "1.0.57"
chashmap = "2.2.2"
clap = "3.1.18"
crossbeam = "0.8.1"
id-arena = "2.2.1"
lazy_static = "1.4.0"
log = { version = "0.4.17", features = ["std"] }
num_cpus = "1.13.1"
rayon = "1.5.3"
salitescript = { path = "./lang/root", features = ["full"] }
serde = { version = "1.0.0", features = ["derive", "rc"] }
serde_json = "1.0.0"
thiserror = "1.0.31"
walkdir = "2"
