[package]
name = "test-suite"
version = "0.1.0"
edition = "2021"

[features]
scripts = []

[dependencies]
lunar_ast = { path = "../crates/ast", features = ["serde"] }
lunar_errors = { path = "../crates/errors", features = ["serde"] }
lunar_parser = { path = "../crates/parser" }
lunar_tokenizer = { path = "../crates/tokenizer" }
serde = "1.0"
serde_json = "1.0"
