[package]
name = "test-suite"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
pathdiff = "0.2.1"
salite = { path = ".." }
salite_ast = { path = "../lang/ast", features = ["serde"] }
salite_common = { path = "../lang/common", features = ["serde"] }
serde_json = "1.0.81"
lazy_static = "1.4.0"
