[package]
name = "lunar_driver"
version = "0.1.0"
edition = "2021"

[dependencies]
lunar_ast = { path = "../ast" }
lunar_config = { path = "../config" }
lunar_parser = { path = "../parser" }
lunar_shared = { path = "../shared" }
lunar_tokenizer = { path = "../tokenizer" }
lunar_typecheck = { path = "../typecheck" }

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "date"
path = "../../benches/date.rs"
harness = false

[[bench]]
name = "t"
path = "../../benches/t.rs"
harness = false

[[bench]]
name = "typecheck"
path = "../../benches/typecheck.rs"
harness = false

