[package]
name = "lunar_driver"
version = "0.1.0"
edition = "2021"

[dependencies]
lunar = { path = "../lib", features = ["full"] }
rayon = "*"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "date"
path = "../../benches/date.rs"
harness = false

[[bench]]
name = "t"
path = "../../benches/t.rs"
harness = false

[[bench]]
name = "typecheck"
path = "../../benches/typecheck.rs"
harness = false

