[package]
name = "lunar_typecheck"
version = "0.1.0"
edition = "2021"

[dependencies]
id-arena = "*"
lunar_ast = { path = "../ast" }
lunar_errors = { path = "../errors" }
lunar_macros = { path = "../macros" }
lunar_shared = { path = "../shared" }
serde = { version = "1.0", features = ["derive", "rc"], optional = true }
