[package]
name = "salite_ast"
version = "0.1.0"
edition = "2021"

[features]
default = []
serde = ["salite_tokens/serde"]

[dependencies]
salite_location = { path = "../location" }
salite_macros = { path = "../macros" }
salite_tokens = { path = "../tokens" }
salite_traits = { path = "../traits" }
smol_str = { version = "0.1.23", features = ["serde"] }
serde = { version = "1.0.0", features = ["derive", "rc"] }
