[package]
name = "lunar_checker"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "1.3.2"
id-arena = "2.2.1"
lazy_static = "1.4.0"
lunar_ast = { path = "../ast" }
lunar_common = { path = "../common" }
lunar_macros = { path = "../macros" }
thiserror = "1.0.31"

[dev-dependencies]
lunar_parser = { path = "../parser" }
lunar_tokenizer = { path = "../tokenizer" }
