[package]
name = "salite_checker"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "1.3.2"
id-arena = "2.2.1"
lazy_static = "1.4.0"
salite_ast = { path = "../ast" }
salite_common = { path = "../common" }
salite_macros = { path = "../macros" }
thiserror = "1.0.31"

[dev-dependencies]
salite_parser = { path = "../parser" }
salite_tokenizer = { path = "../tokenizer" }
