[package]
name = "lunar_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
lunar_ast = { path = "../ast" }
lunar_common = { path = "../common" }
lunar_traits = { path = "../traits" }

[dev-dependencies]
lunar_ast = { path = "../ast", features = ["serde"] }
lunar_common = { path = "../common", features = ["serde"] }
lunar_tokenizer = { path = "../tokenizer" }
lunar_tokens = { path = "../tokens", features = ["serde"] }
serde = { version = "1.0.0", features = ["derive", "rc"] }
serde_json = "1.0.0"
