[package]
name = "salite_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
salite_ast = { path = "../ast" }
salite_common = { path = "../common" }
salite_traits = { path = "../traits" }

[dev-dependencies]
salite_ast = { path = "../ast", features = ["serde"] }
salite_common = { path = "../common", features = ["serde"] }
salite_tokenizer = { path = "../tokenizer" }
salite_tokens = { path = "../tokens", features = ["serde"] }
serde = { version = "1.0.0", features = ["derive", "rc"] }
serde_json = "1.0.0"
