[package]
name = "lunarscript"
version = "0.1.0"
edition = "2018"

[features]
full = ["lunar_ast", "lunar_common", "lunar_macros", "lunar_parser", "lunar_tokenizer", "lunar_checker"]
lazy_parse = ["lunar_ast", "lunar_common", "lunar_parser", "lunar_tokenizer"]

ast = ["lunar_ast"]
checker = ["lunar_checker"]
common = ["lunar_common"]
macros = ["lunar_macros"]
parser = ["lunar_parser"]
tokenizer = ["lunar_tokenizer"]

[dependencies]
lunar_ast = { path = "../ast", optional = true }
lunar_checker = { path = "../checker", optional = true }
lunar_common = { path = "../common", optional = true }
lunar_macros = { path = "../macros", optional = true }
lunar_parser = { path = "../parser", optional = true }
lunar_tokenizer = { path = "../tokenizer", optional = true }
