[package]
name = "salitescript"
version = "0.1.0"
edition = "2018"

[features]
full = ["salite_ast", "salite_common", "salite_macros", "salite_parser", "salite_tokenizer", "salite_checker"]
lazy_parse = ["salite_ast", "salite_common", "salite_parser", "salite_tokenizer"]

ast = ["salite_ast"]
checker = ["salite_checker"]
common = ["salite_common"]
macros = ["salite_macros"]
parser = ["salite_parser"]
tokenizer = ["salite_tokenizer"]

[dependencies]
salite_ast = { path = "../ast", optional = true }
salite_checker = { path = "../checker", optional = true }
salite_common = { path = "../common", optional = true }
salite_macros = { path = "../macros", optional = true }
salite_parser = { path = "../parser", optional = true }
salite_tokenizer = { path = "../tokenizer", optional = true }
