[package]
name = "lunar_tokens"
version = "0.1.0"
edition = "2021"

[features]
default = []
serde = ["lunar_location/serde"]

[dependencies]
lunar_location = { path = "../location" }
lunar_traits = { path = "../traits" }
serde = { version = "1.0.0", features = ["derive", "rc"] }
smol_str = "0.1.21"
