[package]
name = "salite_tokens"
version = "0.1.0"
edition = "2021"

[features]
default = []
serde = ["salite_location/serde"]

[dependencies]
salite_location = { path = "../location" }
salite_traits = { path = "../traits" }
serde = { version = "1.0.0", features = ["derive", "rc"] }
smol_str = "0.1.21"
